// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleFormTs $fieldsInline after render 1`] = `
{
  "profile.firstName": {
    "_type": "fieldMeta",
    "active": false,
    "blurred": false,
    "blurredAfterOuterError": false,
    "changed": false,
    "changedAfterOuterError": false,
    "touched": false,
    "touchedAfterOuterError": false,
    "validate": undefined,
  },
  "profile.lastName": {
    "_type": "fieldMeta",
    "active": false,
    "blurred": false,
    "blurredAfterOuterError": false,
    "changed": false,
    "changedAfterOuterError": false,
    "touched": false,
    "touchedAfterOuterError": false,
    "validate": undefined,
  },
  "username": {
    "_type": "fieldMeta",
    "active": false,
    "blurred": false,
    "blurredAfterOuterError": false,
    "changed": false,
    "changedAfterOuterError": false,
    "touched": false,
    "touchedAfterOuterError": false,
    "validate": undefined,
  },
}
`;

exports[`SimpleFormTs $fieldsInline after setError profile.firstName and focus firstName 1`] = `
{
  "profile.firstName": {
    "_type": "fieldMeta",
    "active": true,
    "blurred": false,
    "blurredAfterOuterError": false,
    "changed": false,
    "changedAfterOuterError": false,
    "touched": true,
    "touchedAfterOuterError": true,
    "validate": undefined,
  },
  "profile.lastName": {
    "_type": "fieldMeta",
    "active": false,
    "blurred": false,
    "blurredAfterOuterError": false,
    "changed": false,
    "changedAfterOuterError": false,
    "touched": false,
    "touchedAfterOuterError": false,
    "validate": undefined,
  },
  "username": {
    "_type": "fieldMeta",
    "active": false,
    "blurred": false,
    "blurredAfterOuterError": false,
    "changed": false,
    "changedAfterOuterError": false,
    "touched": false,
    "touchedAfterOuterError": false,
    "validate": undefined,
  },
}
`;

exports[`SimpleFormTs meta 1`] = `
{
  "hasError": false,
  "hasOuterError": false,
  "submitted": false,
}
`;

exports[`SimpleFormTs meta and onSubmit 1`] = `
{
  "errorsInline": {},
  "fieldsInline": {
    "profile.firstName": {
      "_type": "fieldMeta",
      "active": false,
      "blurred": false,
      "blurredAfterOuterError": false,
      "changed": false,
      "changedAfterOuterError": false,
      "touched": false,
      "touchedAfterOuterError": false,
      "validate": undefined,
    },
    "profile.lastName": {
      "_type": "fieldMeta",
      "active": false,
      "blurred": false,
      "blurredAfterOuterError": false,
      "changed": false,
      "changedAfterOuterError": false,
      "touched": false,
      "touchedAfterOuterError": false,
      "validate": undefined,
    },
    "username": {
      "_type": "fieldMeta",
      "active": false,
      "blurred": false,
      "blurredAfterOuterError": false,
      "changed": false,
      "changedAfterOuterError": false,
      "touched": false,
      "touchedAfterOuterError": false,
      "validate": undefined,
    },
  },
  "form": {
    "hasError": false,
    "hasOuterError": false,
    "submitted": true,
  },
  "meta": {
    "formName": "simpleForm",
  },
  "outerErrorsInline": {},
  "values": {},
}
`;

exports[`SimpleFormTs onChange profile.fistName 1`] = `
[
  <input
    class="input"
    name="username"
    placeholder="Username"
    role="textbox"
    value=""
  />,
  <input
    class="input"
    name="profile.firstName"
    placeholder="First name"
    role="textbox"
    value="test"
  />,
  <input
    class="input"
    name="profile.lastName"
    placeholder="Last name"
    role="textbox"
    value=""
  />,
]
`;

exports[`SimpleFormTs onChange username 1`] = `
[
  <input
    class="input"
    name="username"
    placeholder="Username"
    role="textbox"
    value="test"
  />,
  <input
    class="input"
    name="profile.firstName"
    placeholder="First name"
    role="textbox"
    value=""
  />,
  <input
    class="input"
    name="profile.lastName"
    placeholder="Last name"
    role="textbox"
    value=""
  />,
]
`;

exports[`SimpleFormTs onChange username, test performance 1`] = `
{
  "profile.firstName": 2,
  "profile.lastName": 2,
  "username": 7,
}
`;

exports[`SimpleFormTs setError profile.firstName 1`] = `
[
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Username
    </label>
    <input
      class="input"
      name="username"
      placeholder="Username"
      role="textbox"
      value=""
    />
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      First name
    </label>
    <input
      class="input"
      name="profile.firstName"
      placeholder="First name"
      role="textbox"
      value=""
    />
    <span>
      First name is not valid
    </span>
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Last name
    </label>
    <input
      class="input"
      name="profile.lastName"
      placeholder="Last name"
      role="textbox"
      value=""
    />
  </div>,
]
`;

exports[`SimpleFormTs setError profile.firstName and submit 1`] = `
[
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Username
    </label>
    <input
      class="input"
      name="username"
      placeholder="Username"
      role="textbox"
      value=""
    />
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      First name
    </label>
    <input
      class="input"
      name="profile.firstName"
      placeholder="First name"
      role="textbox"
      value=""
    />
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Last name
    </label>
    <input
      class="input"
      name="profile.lastName"
      placeholder="Last name"
      role="textbox"
      value=""
    />
  </div>,
]
`;

exports[`SimpleFormTs setError profile.firstName, change and submit 1`] = `
[
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Username
    </label>
    <input
      class="input"
      name="username"
      placeholder="Username"
      role="textbox"
      value=""
    />
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      First name
    </label>
    <input
      class="input"
      name="profile.firstName"
      placeholder="First name"
      role="textbox"
      value="t"
    />
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Last name
    </label>
    <input
      class="input"
      name="profile.lastName"
      placeholder="Last name"
      role="textbox"
      value=""
    />
  </div>,
]
`;
